--- a/sass/layout/_home.scss
+++ b/sass/layout/_home.scss
@@ -1,15 +1,12 @@
 
 .home {
-    position: relative;
+    display: grid;
     width: 100%;
     height: 100vh;
     .home--titles {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        top: 30%;
-        left: 30%;
+        display: grid;
+        place-content: center;
+        text-align: center;
         color: white;
         transition: .3s ease all;
         &.light {
@@ -55,26 +52,21 @@
             }
         }
         @include media(tablet) {
-            top: 35%;
-            left: 38%;
+            //
         }
         @include media(desktop-s) {
-            top: 20%;
-            left: 38%;
+            //
         } 
         @include media(desktop) {
-            top: 20%;
-            left: 41%;
+            //
         } 
     }
     .home--btns {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        top: 70%;
-        left: 39%;
+        display: grid;
+        place-content: center;
         .btn--download {
-            padding: 1.5rem;
+            padding: 2rem;
+            font-size: 1.2rem;
             border-radius: 11px;
             border: none;
             text-transform: uppercase;
@@ -95,20 +87,25 @@
             }
             @include media(tablet) {
                 font-size: 1.7rem;
-                padding: 3rem;
+                padding: 2.5rem;
             }
+            @include media(desktop-s) {
+                font-size: 1.7rem;
+                padding: 2.5rem;
+            }
+            @include media(desktop) {
+                font-size: 1.7rem;
+                padding: 2.5rem;
+            } 
         }
         @include media(tablet) {
-            top: 80%;
-            left: 40%;
+            //
         }
         @include media(desktop-s) {
-            top: 70%;
-            left: 45%;
+            //
         }
         @include media(desktop) {
-            top: 70%;
-            left: 46%;
+            //
         } 
     }
 }
